New ratings table in Cassandra (saving)

--- a/service/src/main/resources/application.conf
+++ b/service/src/main/resources/application.conf
@@ -2,8 +2,8 @@ items_schema_id = 0
 
 cassandra {
   # single host to discover other cassandra nodes
-  bootstrap_host = "172.25.0.101"
-  keyspace = "rs_keyspace"
+  bootstrap_host = "127.0.0.1"
+  keyspace = "rs_new_keyspace"
 //  keyspace = "rs_estimation_keyspace" // separate keyspace for estimation service
   ratings_table = "ratings"
   items_table_prefix = "items_"
