--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -9,8 +9,8 @@ service.rest = "http://localhost:18080"
 # keyspace = The keyspace name you want to connect
 # username and password are by default "cassandra", edit to match your setup
 cassandra {
-  host = ["172.25.0.101"]
-  keyspace = "rs_keyspace"
+  host = ["127.0.0.1"]
+  keyspace = "rs_new_keyspace"
 //  keyspace = "rs_estimation_keyspace"
   username = "cassandra"
   password = "cassandra"
