Cassandra ratings_timestamp table (saving and retrieving)

--- a/service/src/main/resources/application.conf
+++ b/service/src/main/resources/application.conf
@@ -6,6 +6,7 @@ cassandra {
   keyspace = "rs_new_keyspace"
 //  keyspace = "rs_estimation_keyspace" // separate keyspace for estimation service
   ratings_table = "ratings"
+  ratings_timestamp_table = "ratings_timestamp"
   items_table_prefix = "items_"
   cf_predictions_table = "cf_predictions"
   cb_predictions_table = "cb_predictions"
@@ -19,7 +20,7 @@ cassandra {
 }
 
 redis {
-  host = "172.25.0.100"
+  host = "127.0.0.1"
   port = "6379"
   ml_params_hash = "ml_params"
 }
