--- a/service/src/main/resources/application.conf
+++ b/service/src/main/resources/application.conf
@@ -8,10 +8,12 @@ cassandra {
   ratings_table = "ratings"
   ratings_timestamp_table = "ratings_timestamp"
   items_table_prefix = "items_"
-  cf_predictions_table = "cf_predictions"
-  cb_predictions_table = "cb_predictions"
+  items_not_rated_by_user_table = "items_not_rated_by_user"
+  predictions_table = "predictions"
+  cf_predictions_column = "cf_prediction"
+  cb_predictions_column = "cb_prediction"
+  hybrid_predictions_column = "hybrid_prediction"
   popular_items_table = "popular_items"
-  hybrid_predictions_table = "hybrid_predictions"
   recommendations_table = "final_recommendations"
   schemas_table = "schemas"
   train_ratings_table = "train_ratings"
