Not rated Items with features table + attempt to use just one "not rated" table.

--- a/service/src/main/resources/application.conf
+++ b/service/src/main/resources/application.conf
@@ -19,6 +19,7 @@ cassandra {
   train_ratings_table = "train_ratings"
   test_ratings_table = "test_ratings"
   item_clusters_table = "item_clusters"
+  not_rated_items_with_features_table = "not_rated_items_with_features"
 }
 
 redis {
