--- a/env/docker-compose.yaml
+++ b/env/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     ports:
       - "9042:9042"
     networks:
-      cassandra_network:
+      service_network:
         ipv4_address: 172.25.0.101
 
 #  cassandra-node:
@@ -20,18 +20,40 @@ services:
 #    environment:
 #      - CASSANDRA_SEEDS=seed1
 #    networks:
-#      - cassandra_network
+#      - service_network
+
+  zookeeper:
+    image: wurstmeister/zookeeper
+    container_name: zookeeper
+    ports:
+      - "2181:2181"
+    networks:
+      - service_network
+
+  kafka:
+    image: wurstmeister/kafka
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: "kafka"
+      KAFKA_ADVERTISED_PORT: "9092"
+      KAFKA_CREATE_TOPICS: "user-interactions:5:1"
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    networks:
+      - service_network
 
   redis:
     image: redis
     ports:
       - "6379:6379"
     networks:
-      cassandra_network:
+      service_network:
         ipv4_address: 172.25.0.100
 
 networks:
-  cassandra_network:
+  service_network:
     driver: bridge
     ipam:
       config:
